# g2ipmsg

./: AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  README.jp  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  g2ipmsg.desktop.in  g2ipmsg.glade  g2ipmsg.gladep  g2ipmsg.schemas.in  g2ipmsg.server.in.in  g2ipmsg.spec  g2ipmsg.xml
doc/: Doxyfile
macros/: ax_prog_doxygen.m4  g2ipmsg.m4
po/: POTFILES.in  ja.po  zh_CN.po
src/: Makefile.am  Makefile.in  applet.c  base64.c  base64.h  callbacks.c  callbacks.h  codeset.c  codeset.h  common.h  compat.h  copying.h  cryptcommon.h  cryptif.c  dbusif.c  dbusif.h  dialog.c  downloads.c  downloads.h  fileattach.c  fileattach.h  fuzai.c  fuzai.h  g2ipmsg.h  hostinfo.c  hostinfo.h  interface.c  interface.h  ipmsg.c  ipmsg.h  ipmsg_types.h  logfile.c  logfile.h  main.c  menu.c  menu.h  message.c  message.h  msginfo.c  msginfo.h  (+30 more)
